@@ -1,3 +1,8 @@
+2011-09-15 .74
+    * Merged in the testing branch to get two DB handles to avoid the parent
+	  and child process from conflicting by using the same handle.
+        - IsaacG
+
 2011-08-12 .73
     * Sort nicknames show in case-insensitive alphabetical order by VinzNL.
         - IsaacG
